--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
 
 .tarot-card .card-back {
   opacity: 0.9;
-  border: 0.5em solid #fff;
+  border: 0.5em solid #f8f0e5;
   border-radius: 0.75em;
   background: linear-gradient(135deg, #00067355 25%, transparent 25%) -9px 0/
       18px 18px,
@@ -74,7 +74,7 @@
   height: 112.5em;
   border-radius: 0.5em;
   border: 3px solid transparent;
-  background-color: azure;
+  background-color: #fff;
 }
 
 .cards {
@@ -93,6 +93,9 @@
   flex-wrap: nowrap;
   flex-direction: column;
   height: 100%;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 600;
+  background-color: #f8f0e5;
 }
 
 .menu {
@@ -112,4 +115,23 @@
   border-radius: 0.1875rem;
   font-size: 1rem;
   font-weight: 600;
+}
+
+.poker p {
+  width: 9rem;
+  font-size: 1rem;
+  margin: 0;
+}
+
+.poker.top p {
+  text-align: start;
+}
+
+.poker.bottom p {
+  text-align: start;
+  transform: scale(-1, -1);
+}
+
+p.small {
+  font-size: 0.8rem;
 }
